plugins {
    id 'base'
    id 'io.spring.dependency-management' version '1.1.7'
}

allprojects {
    group = 'io.github.habatoo'
    version = '1.0-SNAPSHOT'

    repositories {
        mavenCentral()
        mavenLocal()
    }

    dependencyManagement {
        imports {
            mavenBom 'io.github.habatoo:bom:1.0-SNAPSHOT'
        }
    }

    tasks.withType(JavaCompile).tap {
        configureEach {
            options.encoding = 'UTF-8'
            sourceCompatibility = '21'
            targetCompatibility = '21'
            options.compilerArgs.add("-parameters")
        }
    }
}